--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@atlaskit/css-reset": "^6.0.5",
     "next": "latest",
     "react": "^16.8.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
     "styled-components": "^5.0.0"
